[gd_scene load_steps=45 format=2]

[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/dino/Idle (9).png" type="Texture" id=2]
[ext_resource path="res://assets/dino/Idle (6).png" type="Texture" id=3]
[ext_resource path="res://assets/dino/Idle (8).png" type="Texture" id=4]
[ext_resource path="res://assets/dino/Idle (7).png" type="Texture" id=5]
[ext_resource path="res://assets/dino/Idle (10).png" type="Texture" id=6]
[ext_resource path="res://assets/dino/Walk (1).png" type="Texture" id=7]
[ext_resource path="res://assets/dino/Walk (9).png" type="Texture" id=8]
[ext_resource path="res://assets/dino/Run (1).png" type="Texture" id=9]
[ext_resource path="res://assets/dino/Dead (7).png" type="Texture" id=10]
[ext_resource path="res://assets/dino/Dead (8).png" type="Texture" id=11]
[ext_resource path="res://assets/dino/Dead (5).png" type="Texture" id=12]
[ext_resource path="res://assets/dino/Idle (1).png" type="Texture" id=13]
[ext_resource path="res://assets/dino/Idle (2).png" type="Texture" id=14]
[ext_resource path="res://assets/dino/Idle (3).png" type="Texture" id=15]
[ext_resource path="res://assets/dino/Run (6).png" type="Texture" id=16]
[ext_resource path="res://assets/dino/Run (2).png" type="Texture" id=17]
[ext_resource path="res://assets/dino/Run (4).png" type="Texture" id=18]
[ext_resource path="res://assets/dino/Run (8).png" type="Texture" id=19]
[ext_resource path="res://assets/dino/Dead (4).png" type="Texture" id=20]
[ext_resource path="res://assets/dino/Idle (4).png" type="Texture" id=21]
[ext_resource path="res://assets/dino/Idle (5).png" type="Texture" id=22]
[ext_resource path="res://assets/dino/Dead (1).png" type="Texture" id=23]
[ext_resource path="res://assets/dino/Walk (6).png" type="Texture" id=24]
[ext_resource path="res://assets/dino/Walk (4).png" type="Texture" id=25]
[ext_resource path="res://assets/dino/Walk (8).png" type="Texture" id=26]
[ext_resource path="res://assets/dino/Run (3).png" type="Texture" id=27]
[ext_resource path="res://assets/dino/Walk (2).png" type="Texture" id=28]
[ext_resource path="res://assets/dino/Walk (10).png" type="Texture" id=29]
[ext_resource path="res://assets/dino/Run (5).png" type="Texture" id=30]
[ext_resource path="res://assets/dino/Walk (7).png" type="Texture" id=31]
[ext_resource path="res://assets/dino/Dead (6).png" type="Texture" id=32]
[ext_resource path="res://assets/dino/Walk (3).png" type="Texture" id=33]
[ext_resource path="res://assets/dino/Walk (5).png" type="Texture" id=34]
[ext_resource path="res://assets/dino/Run (7).png" type="Texture" id=35]
[ext_resource path="res://assets/dino/Dead (2).png" type="Texture" id=36]
[ext_resource path="res://assets/dino/Dead (3).png" type="Texture" id=37]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 24 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 8 ), ExtResource( 29 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 32 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 17 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 30 ), ExtResource( 16 ), ExtResource( 35 ), ExtResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65.7841, 146.486 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 97.2151, 36.3646 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 58.7444, 145.408 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 50.5686, 56.2964 )

[sub_resource type="Animation" id=6]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_bounty"
}, {
"args": [ false ],
"method": "set_physics_process"
} ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.333333 )
position = Vector2( 130, -185 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -143.843 )
shape = SubResource( 2 )

[node name="StompArea2D" type="Area2D" parent="."]
position = Vector2( 0, -320 )
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea2D"]
position = Vector2( 21.3575, 0 )
shape = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, -143.843 )
shape = SubResource( 4 )

[node name="EdgeDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeDetector"]
position = Vector2( 167.113, -10.4142 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 6 )
anims/die = SubResource( 7 )
[connection signal="area_entered" from="StompArea2D" to="." method="_on_StompArea2D_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="EdgeDetector" to="." method="_on_EdgeDetector_body_exited"]
